PaintersHelper - restore JPG renderer
GitOrigin-RevId: 5ca6e2afacc2dacd6a20276d161dd19da5ea6dc1